fix z-index for modeTabs and header

--- a/src/splashLayout/layout.module.css
+++ b/src/splashLayout/layout.module.css
@@ -22,7 +22,7 @@
   max-width: 100vw;
   margin: 0 auto;
   background-color: #fbfaf7;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__logo {
